--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -386,7 +386,6 @@
             <!-- ACTIES-->
             <TabItem Header="Acties" Name="tabItemActies" Background="White" Padding="5" Width="80" HorizontalAlignment="Center">
                 <Grid Name="GridActies">
-                    
                     <GroupBox Header="Importeer studenten" Height="82" Margin="10,2,5,0" Name="groupBoxImport" VerticalAlignment="Top">
                         <Grid>
                             <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockImport" Text="Deze actie kan een .csv-bestand importeren die studenten bevat." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
@@ -394,27 +393,27 @@
                         </Grid>
                     </GroupBox>
 
-                    <GroupBox Header="Exporteer rooster" Height="82" Margin="10,92,5,0" Name="groupBoxExportPDF" VerticalAlignment="Top">
+                    <GroupBox Header="Exporteer rooster" Height="82" Margin="10,182,5,0" Name="groupBoxExportPDF" VerticalAlignment="Top">
                         <Grid>
                             <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockExportPDF" Text="Deze actie zal het rooster exporteren naar een pdf-bestand." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
                             <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonExportPDF" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonExportPDF_Click" />
                         </Grid>
                     </GroupBox>
 
-                    <GroupBox Header="Verwijder gegevens" Height="82" Margin="10,182,5,0" Name="groupBoxVerwijderGegevens" VerticalAlignment="Top">
+                    <GroupBox Header="Verwijder gegevens" Height="82" Margin="10,272,5,0" Name="groupBoxVerwijderGegevens" VerticalAlignment="Top">
                         <Grid>
                             <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockVerwijderGegevens" Text="Deze actie opent een scherm waarop u te verwijderen persoonsdata van studenten, docenten en externe deskundigen kunt aangeven en laten verwijderen." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
                             <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonVerwijderGegevens" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonVerwijderGegevens_Click" />
                         </Grid>
                     </GroupBox>
-                    <GroupBox Header="Email versturen" Height="82" Margin="10,272,5,0" Name="groupBoxEmailVersturen" VerticalAlignment="Top">
+                    <GroupBox Header="Email versturen" Height="82" Margin="10,362,5,0" Name="groupBoxEmailVersturen" VerticalAlignment="Top">
                             <Grid>
                                 <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockEmailVersturen" Text="Deze actie helpt u om e-mail berichten te maken en versturen naar studenten en docenten." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
                                 <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonEmailVersturen" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonEmailVersturen_Click" />
                             </Grid>
                         </GroupBox>
 
-                        <GroupBox Header="Brief maken" Height="82" Margin="10,360,5,0" Name="groupBoxBriefMaken" VerticalAlignment="Top">
+                        <GroupBox Header="Brief maken" Height="82" Margin="10,450,5,0" Name="groupBoxBriefMaken" VerticalAlignment="Top">
                                 <Grid>
 
                             <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefMaken" Text="Deze actie helpt u om afstudeerscriptiebrieven in PDF formaat te maken om te printen en te versturen naar de externe deskundigen." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic"/>
@@ -423,7 +422,7 @@
                         </Grid>
                         
                         </GroupBox>
-                    <GroupBox Header="Zittingen Genereren" Height="82" Margin="10,448,5,0" Name="groupBoxZittingenGen" VerticalAlignment="Top">
+                    <GroupBox Header="Zittingen Genereren" Height="82" Margin="10,538,5,0" Name="groupBoxZittingenGen" VerticalAlignment="Top">
                         <Grid>
                             <TextBlock FontStyle="Italic" Foreground="#FF5E5353" Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockZittingGen" Text="Deze actie genereert automatisch een planning voor de zittingen." TextWrapping="Wrap" VerticalAlignment="Top" Width="570" />
                             <Button Background="#FFEFEFEF" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonZittingenGenereren" VerticalAlignment="Top" Width="98" Click="buttonZittingenGenereren_Click" />
@@ -443,6 +442,12 @@
                         <Label Content="Gebruik of sluit de applicatie niet af." Height="28" HorizontalAlignment="Left" Margin="145,73,0,0" Name="labelLoadingGenExtra" VerticalAlignment="Top" Width="197" Foreground="#FF939393" FontStyle="Italic" />
                         
                         </Grid>
+                    <GroupBox Header="Koppelingen leggen" Height="82" Margin="10,90,5,0" Name="groupBoxKoppelingLeggen" VerticalAlignment="Top">
+                        <Grid>
+                            <TextBlock FontStyle="Italic" Foreground="#FF5E5353" Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockKoppelingen" Text="Deze actie kan docenten en experts aan studenten-paren koppelen." TextWrapping="Wrap" VerticalAlignment="Top" Width="570" />
+                            <Button Background="#FFEFEFEF" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonKoppelen" VerticalAlignment="Top" Width="98" Click="buttonKoppelen_Click" />
+                        </Grid>
+                    </GroupBox>
                 </Grid>
                 
             </TabItem>
