--- a/PAZ/View/SessionWindow.xaml
+++ b/PAZ/View/SessionWindow.xaml
@@ -12,37 +12,15 @@
         <Label Content="Docent 2" Foreground="#FF5E5353" FontStyle="Italic" HorizontalAlignment="Left" Margin="12,91,0,0" Name="lblteacher2" Height="28" VerticalAlignment="Top" Grid.ColumnSpan="2" />
         <Label Content="Expert 1" Foreground="#FF5E5353" FontStyle="Italic" Height="28" HorizontalAlignment="Left" Margin="12,125,0,0" Name="lblexpert1" VerticalAlignment="Top" Grid.ColumnSpan="2" />
         <Label Content="Expert 2" Foreground="#FF5E5353" FontStyle="Italic" Height="28" HorizontalAlignment="Right" Margin="0,160,318,0" Name="lblexpert2" VerticalAlignment="Top" Grid.ColumnSpan="2" />
-        <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="50,17,0,0" Name="cbPairs" VerticalAlignment="Top" Width="258" SelectionChanged="cbPairs_SelectionChanged" Grid.Column="1">
-            <ComboBoxItem Content="Jeroen Snipper, Hidde Mees" />
-            <ComboBoxItem Content="Freek Laure, Mark de Boer" />
-            <ComboBoxItem Content="Ibrahim Moers, Mark Demin" />
-            <ComboBoxItem Content="Teun hoeder, Yorg Klever" />
+        <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="50,17,0,0" Name="cbPairs" VerticalAlignment="Top" Width="258" Grid.Column="1">
         </ComboBox>
         <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="52,56,0,0" Name="cbTeacher1" VerticalAlignment="Top" Width="258" Grid.Column="1">
-            <ComboBoxItem Content="Gers Saris" />
-            <ComboBoxItem Content="Bob Bus" />
-            <ComboBoxItem Content="Marco Huysmans" />
-            <ComboBoxItem Content="Bob Polis" />
         </ComboBox>
         <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="52,91,0,0" Name="cbTeacher2" VerticalAlignment="Top" Width="258" Grid.Column="1">
-            <ComboBoxItem Content="Gers Saris" />
-            <ComboBoxItem Content="Bob Bus" />
-            <ComboBoxItem Content="Marco Huysmans" />
-            <ComboBoxItem Content="Bob Polis" />
         </ComboBox>
         <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="52,125,0,0" Name="cbExpert1" VerticalAlignment="Top" Width="258" Grid.Column="1">
-            <ComboBoxItem Content="Piet Krammers" />
-            <ComboBoxItem Content="Mariam Hourder" />
-            <ComboBoxItem Content="Nikki Jansen" />
-            <ComboBoxItem Content="Bart Passer" />
-            <ComboBoxItem Content="Huub van Veghel" />
         </ComboBox>
         <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="52,160,0,0" Name="cbExpert2" VerticalAlignment="Top" Width="258" Grid.Column="1">
-            <ComboBoxItem Content="Piet Krammers" />
-            <ComboBoxItem Content="Mariam Hourder" />
-            <ComboBoxItem Content="Nikki Jansen" />
-            <ComboBoxItem Content="Bart Passer" />
-            <ComboBoxItem Content="Huub van Veghel" />
         </ComboBox>
         <Button Content="Save" Height="23" HorizontalAlignment="Right" Background="#FFEFEFEF" Foreground="#FF595959" Margin="0,203,31,0" Name="btnSave" VerticalAlignment="Top" Width="75" Click="btnSave_Click" Grid.Column="1" />
     </Grid>
