--- a/PAZ/View/DeleteDataWindow.xaml
+++ b/PAZ/View/DeleteDataWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PAZ.DeleteDataWindow"
+<Window x:Class="PAZ.DeleteDataWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Gegevens verwijderen" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Background="#FFD51D53">
@@ -6,22 +6,15 @@
         <TabControl HorizontalAlignment="Left" Name="tcVerwijderen" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
             <TabItem Header="Te verwijderen gegevens kiezen" Name="tiVerwijderen">
                 <Grid>
-                    <GroupBox Header="Personen: " Height="397.04" HorizontalAlignment="Left" Margin="6,6,0,0" Name="gbPersonen" VerticalAlignment="Top" Width="430">
+                    <GroupBox Header="Personen: " Height="397.04" HorizontalAlignment="Left" Margin="6,6,0,0" Name="gbPersonen" VerticalAlignment="Top" Width="634">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="29*" />
                                 <ColumnDefinition Width="282*" />
                             </Grid.ColumnDefinitions>
                             <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Name="cbxPersoonSelector" Margin="6,5,18,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Checked="cbxPersoonSelector_Checked" Unchecked="cbxPersoonSelector_Unchecked" />
-                            <ScrollViewer Height="336.08" Margin="6,32,0,0" Name="scrollViewerPersonen" VerticalAlignment="Top" Width="406" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" CanContentScroll="False" HorizontalAlignment="Left"></ScrollViewer>
+                            <ScrollViewer Height="336.08" Margin="6,32,0,0" Name="scrollViewerPersonen" VerticalAlignment="Top" Width="598" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" CanContentScroll="False" HorizontalAlignment="Left"></ScrollViewer>
                             <Separator Name="separator1" Grid.ColumnSpan="2" Margin="6,21,6,351.763" />
-                        </Grid>
-                    </GroupBox>
-                    <GroupBox Header="Lokalen: " Height="397.04" HorizontalAlignment="Left" Margin="442,6,0,0" Name="gbLokalen" VerticalAlignment="Top" Width="204">
-                        <Grid>
-                            <ScrollViewer HorizontalScrollBarVisibility="Auto" Name="scrollViewerLokalen" VerticalScrollBarVisibility="Auto" Margin="6,32,6,6" />
-                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Margin="6,6,6,0" Name="cbxLokaalSelector" VerticalAlignment="Top" Checked="cbxLokalenSelector_Checked" Unchecked="cbxLokalenSelector_Unchecked" />
-                            <Separator Height="2" HorizontalAlignment="Left" Margin="6,24,0,0" Name="separator2" VerticalAlignment="Top" Width="287" />
                         </Grid>
                     </GroupBox>
                 </Grid>
